--- a/NAM/res/values/strings.xml
+++ b/NAM/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">NAM</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="avatar_description">Avatar</string>
 
 </resources>
