--- a/NAM/res/values/strings.xml
+++ b/NAM/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">NAM</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="add_action">Add</string>
+    <string name="settings_action">Settings</string>    
 
 </resources>
